feat: create record when user access the redirect api
